blog page ui fixes explore page responsive ui and hobby icon hexa hobby pages gap 8px in mobile see more working in hobby pages for all AND showing keywords

--- a/src/pages/explore/explore.module.css
+++ b/src/pages/explore/explore.module.css
@@ -18,6 +18,7 @@
 
 .container {
   background-color: #EBEDF0;
+  padding: 12px 0 50px 0;
 }
   .gridContainer {
     row-gap: 8px;
