--- a/src/styles/HobbyDetail.module.css
+++ b/src/styles/HobbyDetail.module.css
@@ -442,12 +442,12 @@
     display: grid;
     width: calc(100% - 0px);
     grid-template-columns: 1fr;
-    margin-top: 8px;
+    /* margin-top: 8px; */
 
     row-gap: 8px;
   }
   .posts-container {
-    margin-top: 8px;
+    /* margin-top: 8px; */
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -500,7 +500,7 @@
     padding: 12px 16px;
     gap: 10px;
     background-color: white;
-    margin-top: 8px;
+    /* margin-top: 8px; */
   }
   .expand-all > p {
     color: #8064a2;
@@ -516,7 +516,7 @@
     border-radius: 0;
   }
   .links-container {
-    margin-top: 8px;
+    /* margin-top: 8px; */
     grid-template-columns: 100%;
     gap: 8px;
   }
@@ -529,7 +529,7 @@
     gap: var(--spacing-16);
   }
   .pages-container {
-    margin-top: 8px;
+    /* margin-top: 8px; */
     grid-template-columns: 1fr !important;
   }
 }
